--- a/MxOnline/readme
+++ b/MxOnline/readme
@@ -5,3 +5,4 @@ python3.6安装xadmin:
     然后进行相关配置 详细安装参考上面地址，需要注意的是3.6需要额外安装模块django-import-export
 
     create a new branch is so quick.
+    new line.
